--- a/RESTService/pom.xml
+++ b/RESTService/pom.xml
@@ -7,20 +7,20 @@
     <version>1.0-SNAPSHOT</version>
     <name>RESTService</name>
 
-    <!--<properties>
-
-        <spring.version>3.2.0.RELEASE</spring.version>
-    </properties>-->
-
     <properties>
         <spring.version>4.1.5.RELEASE</spring.version>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
 
-
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.1.5.RELEASE</version>
+        </dependency>
+
 
         <!-- Servlet -->
         <dependency>
